# ticketing_platform

./: .gitignore  README.md
20250806/: login.html
20250806/css/: index.css  login.css  ticket.css
backend/: config.py  db.sqlite3  pyment_generator.py  pyproject.toml  test_sdk.py
backend/apps/concerts/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/concerts/migrations/: 0001_initial.py
backend/apps/orders/: admin.py  models.py  serializers.py  views.py
backend/apps/orders/migrations/: 0001_initial.py
backend/apps/payments/: urls.py  views.py
backend/apps/users/: admin.py  models.py  serializers.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
backend/media/concert_images/: BLACKPINK_亞洲巡演.jfif
frontend/: goods.html  jsconfig.json  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend-legacy/: index.html  order.html  register.html  ticket.html
frontend-legacy/css/: good.css
frontend/css/: order.css
frontend/public/img/: 周杰倫 2025 世界巡迴演唱會.jfif
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/cart/: page.js
frontend/src/app/concerts/: page.js
frontend/src/app/info/: page.js
frontend/src/app/search/: SearchContent.js  page.js
frontend/src/app/tickets/: page.js
frontend/src/components/booking/: PriceTable.js  SeatMap.js
frontend/src/components/concerts/: ConcertCard.js  ConcertCarousel.js
frontend/src/data/: concerts.js
frontend/src/hooks/: useAuth.js  useAuthHelper.js  useCart.js
frontend/src/utils/: api.js
(+7 files in other folders)
